Add color manipulation buttons and enhance layout in index.html, script.js, and styles.css

--- a/index.html
+++ b/index.html
@@ -36,10 +36,21 @@
       </div>
     </div>
     <div class="output-container">
-      <textarea id="color-info" rows="11" cols="50" readonly></textarea>
-      <button id="copy-button">
-        <i class="fas fa-copy"></i>
-      </button>
+      <textarea id="color-info" rows="11" cols="50"></textarea>
+      <div class="output-buttons">
+        <button id="import-button" class="icon-button" title="Import">
+          <i class="fas fa-file-import"></i>
+        </button>
+        <button id="reset-button" class="icon-button" title="Reset">
+          <i class="fas fa-undo"></i>
+        </button>
+        <button id="randomize-button" class="icon-button" title="Randomize">
+          <i class="fas fa-dice-five"></i>
+        </button>
+        <button id="copy-button" class="icon-button" title="Copy">
+          <i class="fas fa-copy"></i>
+        </button>
+      </div>
     </div>
   </main>
   <footer>
