--- a/index.html
+++ b/index.html
@@ -50,11 +50,18 @@
         <button id="copy-button" class="icon-button" title="Copy">
           <i class="fas fa-copy"></i>
         </button>
+        <a href="https://www.etsy.com/listing/1756217914" class="icon-button" title="Etsy Store" target="_blank">
+          <i class="fab fa-etsy"></i>
+        </a>
       </div>
     </div>
   </main>
   <footer>
     <p>&copy; 2025 Polybar Mini Guitar Designer</p>
+    <a href="https://github.com/nathan-spencer/polybar-mini-guitar-designer" class="icon-button"
+      title="GitHub Repository" target="_blank">
+      <i class="fab fa-github"></i>
+    </a>
   </footer>
   <script src="script.js"></script>
 </body>
